Implementação do cadastro de cronogramas da sala.